[tool.poetry]
name = "chronicle-api"
version = "0.1.0"
description = "An app for logging your D&D adventures!"
authors = ["Chris <chrisiivix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
sqlmodel = "^0.0.6"
sqlalchemy = "1.4.35"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
